--- a/CemrgApp/Plugins/kcl.cemrgapp.scar/src/internal/AtrialScarClipperViewControls.ui
+++ b/CemrgApp/Plugins/kcl.cemrgapp.scar/src/internal/AtrialScarClipperViewControls.ui
@@ -40,7 +40,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QVTKOpenGLWidget" name="widget_1" native="true">
+    <widget class="QVTKOpenGLStereoWidget" name="widget_1" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
@@ -113,9 +113,9 @@ background-color: yellow;</string>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>QVTKOpenGLWidget</class>
+   <class>QVTKOpenGLStereoWidget</class>
    <extends>QWidget</extends>
-   <header>QVTKOpenGLWidget.h</header>
+   <header>QVTKOpenGLStereoWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
