--- a/CemrgApp/Plugins/kcl.cemrgapp.atrialstrainmotion/src/internal/AtrialStrainMotionViewControls.ui
+++ b/CemrgApp/Plugins/kcl.cemrgapp.atrialstrainmotion/src/internal/AtrialStrainMotionViewControls.ui
@@ -80,9 +80,16 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="button_0_3_checklabels">
+     <property name="text">
+      <string>8. Verify Labels</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="button_man8_clipPV">
      <property name="text">
-      <string>8. Clip PV</string>
+      <string>9. Clip PV</string>
      </property>
     </widget>
    </item>
