--- a/CemrgApp/Plugins/kcl.cemrgapp.atrialstrainmotion/src/internal/AtrialStrainMotionViewControls.ui
+++ b/CemrgApp/Plugins/kcl.cemrgapp.atrialstrainmotion/src/internal/AtrialStrainMotionViewControls.ui
@@ -94,6 +94,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="btn_mesh_improvement">
+     <property name="text">
+      <string>10. Mesh Improvement</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="spacer1">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
